syntax = "proto2";

option cc_enable_arenas = true;
option java_package = "com.aliyun.openservices.eas.predict.proto";
option java_outer_classname = "BladeProtos";

enum DataType {
  DT_UNKNOWN = 0;
  DT_FLOAT = 1;
  DT_INT32 = 2;
  DT_INT64 = 3;
  DT_STRING = 4;
}

message Shape {
  repeated int64 dim = 1 [packed = true];
}

// Protocol buffer representing an array
message Array {

  // if simply infer one model without dsl then ignore this
  // other cases please specify it
  optional string blade_blob_name = 1;

  // if this is defined in the blade dsl then ignore this
  optional string name_in_dl_model = 2;

  required int32 batchsize = 3;
  
  // Shape of the array.
  optional Shape shape = 4;

  repeated float float_val = 5 [packed = true];

  repeated int32 int_val = 6 [packed = true];

  repeated int64 int64_val = 7 [packed = true];
    
  repeated bytes string_val = 8;

}

message OutputInfo {

  // if simply infer one model without dsl, ignore this
  // other cases please specify it
  optional string blade_blob_name = 1;

  // if this is defined in the blade dsl then ignore this
  optional string name_in_dl_model = 2;

  optional DataType data_type = 3;

}

message Request {

  optional string tf_signature_name = 1;

  repeated Array inputs = 2;
  
  repeated OutputInfo output_info = 3;

}

message Response {
  
  repeated Array outputs = 1;
  
}

